RESOLVED FIXED281718
[Writing Tools] Writing tools rewrite incorrectly removes links in Mail compose
https://bugs.webkit.org/show_bug.cgi?id=281718
Summary [Writing Tools] Writing tools rewrite incorrectly removes links in Mail compose
Wenson Hsieh
Reported 2024-10-17 20:44:28 PDT
Attachments
Wenson Hsieh
Comment 1 2024-10-17 21:12:17 PDT
EWS
Comment 2 2024-10-18 06:52:48 PDT
Committed 285398@main (becb5858cc51): <https://commits.webkit.org/285398@main> Reviewed commits have been landed. Closing PR #35404 and removing active labels.
EWS
Comment 3 2024-10-18 11:57:08 PDT
Committed 283286.321@safari-7620-branch (cda7a1209985): <https://commits.webkit.org/283286.321@safari-7620-branch> Reviewed commits have been landed. Closing PR #2079 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.